Spacing Fix

--- a/src/roundeddark.css
+++ b/src/roundeddark.css
@@ -440,7 +440,8 @@ a[href="/store"]:hover:before{
     margin:var(--spacing);
 }
 .sidebar-1tnWFu {margin-top:var(--spacing);}
-.wrapper-1_HaEi {margin-top:calc(var(--spacing) - 4px);}
+.wrapper-1_HaEi {margin-top:var(--spacing);}
+.tutorialContainer-1pL9QS{padding-top:7px;}
 .platform-win .typeWindows-2-g3UY{
     top:calc(var(--spacing) + 1px);
     left:calc((var(--spacing) - var(--spacing)) - (var(--spacing) + 1px));
